# omap-terminal

./: Makefile.am  README  configure.ac
src/: Makefile.am  omap-terminal.c  omap-terminal.desktop  omap-terminal.gs
